corrigiendo las clases

--- a/src/main/resources/templates/public/css/style.css
+++ b/src/main/resources/templates/public/css/style.css
@@ -44,7 +44,7 @@ h1,h2,h3,h4,h5,h6{
 	font-family: 'Montserrat', sans-serif;
 }
 .top-img-agileits-w3layouts {
-    background: url(../images/bann.jpg)no-repeat 0px 0px;
+    background: url(../images/image.jpg)no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -60,13 +60,13 @@ h2.sub-head-w3-agileits {
     font-size:30px;
     text-transform: capitalize;
     letter-spacing: 3px;
-    color: #fff;
+    color: #b32eb5;
     padding-bottom: 10px;
     font-weight: 400;
     text-align: center;
 }
 .top-img-agileits-w3layouts p {
-    color: #fffcfc;
+    color: #b32eb5;
     letter-spacing: 1px;
     text-align: left;
     font-size: 13px;
@@ -86,18 +86,18 @@ h2.sub-head-w3-agileits {
     -moz-box-shadow: 10px 10px 16px 0px rgba(255, 255, 255, 0.1);
     box-shadow: 10px 10px 16px 0px rgba(255, 255, 255, 0.1);
 }
-.login-form input[type="text"], .login-form textarea, .login-form input[type="email"] {
+.login-form input[type="text"], .login-form textarea {
     width: 100%;
     padding: 10px 20px;
     border: none;
 	border-radius: 18px;
     outline: none;
-    color: #fff;
-	    box-sizing: border-box;
+    color: #84378b;
+	box-sizing: border-box;
     font-size: 13px;
     letter-spacing: 1px;
     margin-bottom: 15px;
-    background: rgba(45, 45, 45, 0.56);
+    background: #e3d9f9;
     transition: 0.5s all;
     -webkit-transition: 0.5s all;
     -o-transition: 0.5s all;
@@ -105,6 +105,16 @@ h2.sub-head-w3-agileits {
     -moz-transition: 0.5s all;
     font-family: 'Montserrat', sans-serif;
 }
+.login-form input[type="text"]:hover{
+	color: #84378b;
+	text-decoration: none;
+	transition:0.5s all;
+	-webkit-transition:0.5s all;
+	-o-transition:0.5s all;
+	-ms-transition:0.5s all;
+	-moz-transition:0.5s all;
+}
+
 
 .field-half select{
 	width: 100%;
