--- a/src/main/resources/templates/encuesta.html
+++ b/src/main/resources/templates/encuesta.html
@@ -9,7 +9,7 @@
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!-- Custom Theme files -->
-    <link href="public/css/style.css" rel='stylesheet' type='text/css' />
+    <link href="css/style.css" rel='stylesheet' type='text/css' />
     <!--fonts-->
     <link href="//fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800" rel="stylesheet">
     <!--//fonts-->
@@ -51,12 +51,12 @@
 
 <!-- Scripts -->
 
-<script src="public/js/jquery.min.js"></script>
-<script src="public/js/jquery.dropotron.min.js"></script>
-<script src="public/js/browser.min.js"></script>
-<script src="public/js/breakpoints.min.js"></script>
-<script src="public/js/util.js"></script>
-<script src="public/js/main.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.dropotron.min.js"></script>
+<script src="js/browser.min.js"></script>
+<script src="js/breakpoints.min.js"></script>
+<script src="js/util.js"></script>
+<script src="js/main.js"></script>
 <script>
     $(document).ready (function () {
         $.get("https://api.ipify.org?format=json",
