creo que ya ta listo

--- a/src/main/resources/templates/tablaOnline.html
+++ b/src/main/resources/templates/tablaOnline.html
@@ -60,7 +60,7 @@
 									<td class="column6">${encuesta.longitudCorta()}</td>
 									<td class="column8"><button class="btn btn-success" onclick=" window.open('/mapa/${encuesta.latitudString()}/${encuesta.longitudString()}','_blank')"> Ver Mapa </button></td>
 								</tr>
-							<#/list>
+							</#list>
 						</tbody>
 					</table>
 				</div>
