--- a/src/main/resources/templates/mapa.html
+++ b/src/main/resources/templates/mapa.html
@@ -20,7 +20,7 @@
             }),
         ],
         view: new ol.View({
-            center: ol.proj.fromLonLat([({lon}),({lat})]),
+            center: ol.proj.fromLonLat([(${lon}),(${lat})]),
             zoom: 15
         }),
 
@@ -28,7 +28,7 @@
 
     let marker = new ol.Feature({
         geometry: new ol.geom.Point(
-            ol.proj.fromLonLat([({lon}),({lat})])
+            ol.proj.fromLonLat([(${lon}),(${lat})])
         )
     });
 
