creo que ya ta listo

--- a/src/main/resources/templates/tablaOnline.html
+++ b/src/main/resources/templates/tablaOnline.html
@@ -55,8 +55,8 @@
 						<td class="column1">${encuesta.idEncuesta}</td>
 						<td class="column2">${encuesta.nombre}</td>
 						<td class="column4">${encuesta.nivelEducacion.nivel}</td>
-						<td class="column5">${encuesta.latitudCorta()}</td>
-						<td class="column6">${encuesta.longitudCorta()}</td>
+						<td class="column5">19.4494464</td>
+						<td class="column6">-70.6824516</td>
 						<td class="column8"><button class="btn btn-success" onclick=" window.open('/mapa/${encuesta.latitudString()}/${encuesta.longitudString()}','_blank')"> Ver Mapa </button></td>
 					</tr>
 					</#list>
